# riscv-perf-model

./: .clang-format  .gitignore  .gitmodules  .gitmodules.save  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CodingStyle.md  LICENSE  README.md  TEMP_TEST.txt  fix_symlinks.py  mavis_isa_files  test.json
core/: BPTypes.hpp  BPU.cpp  BPU.hpp  BTB.hpp  BasePredictor.cpp  BasePredictor.hpp  BranchPred.cpp  BranchPred.hpp  BranchPredIF.hpp  CMakeLists.txt  CPU.cpp  CPU.hpp  CPUFactories.hpp  CPUFactory.cpp  CPUFactory.hpp  CPUTopology.cpp  CPUTopology.hpp  Cache.cpp  Cache.hpp  CacheFuncModel.hpp  Core.cpp  Core.hpp  CoreExtensions.hpp  CoreTypes.hpp  CoreUtils.hpp  DCache.cpp  DCache.hpp  DataPrefetcher.cpp  DataPrefetcher.hpp  Decode.cpp  Decode.hpp  Dispatch.cpp  Dispatch.hpp  Dispatcher.cpp  Dispatcher.hpp  Execute.cpp  Execute.hpp  ExecutePipe.cpp  ExecutePipe.hpp  FTQ.cpp  (+62 more)
core/cpu/: CMakeLists.txt  CPU.cpp  CPUFactories.hpp  CPUFactory.cpp  CPUFactory.hpp  CPUTopology.cpp  CPUTopology.hpp  FlushManager.hpp
core/decode/: CMakeLists.txt  Decode.cpp  Decode.hpp  FusionDecode.cpp  MavisUnit.cpp  MavisUnit.hpp
core/dispatch/: CMakeLists.txt  Dispatch.cpp  Dispatch.hpp  Dispatcher.cpp  Dispatcher.hpp
core/execute/: CMakeLists.txt  Execute.cpp  Execute.hpp  ExecutePipe.cpp  ExecutePipe.hpp  IssueQueue.cpp  IssueQueue.hpp
core/fetch/: BPU.cpp  BPU.hpp  BasePredictor.cpp  BasePredictor.hpp  BranchPredIF.hpp  CMakeLists.txt  EnhancedBranchPred.cpp  EnhancedBranchPred.hpp  Fetch.cpp  Fetch.hpp  ICache.cpp  ICache.hpp  SimpleBranchPred.cpp  SimpleBranchPred.hpp  TAGE_SC_L.cpp  TAGE_SC_L.hpp
core/inst/: CMakeLists.txt  Inst.hpp  InstArchInfo.cpp  InstGenerator.cpp  InstGroup.hpp  LoadStoreInstInfo.hpp
core/lsu/: CMakeLists.txt  DCache.cpp  DCache.hpp  LSU.cpp  LSU.hpp
core/memory/: CMakeLists.txt  MMU.hpp  MemoryAccessInfo.hpp  ReplacementFactory.hpp
core/prefetcher/: CMakeLists.txt  Prefetcher.cpp  Prefetcher.hpp  PrefetcherIF.hpp  Prefetcher_test.cpp  test_prefetcher.cpp
core/prefetcher/engines/: PrefetchEngineIF.hpp  StridePrefetchEngine.cpp
core/preloader/: CMakeLists.txt
core/rename/: CMakeLists.txt  Rename.cpp  Rename.hpp  RenameData.hpp
core/rob/: CMakeLists.txt  ROB.cpp  ROB.hpp
core/sim_engine/: CMakeLists.txt
core/test/: CMakeLists.txt  test_prefetcher.cpp
core/utils/: CMakeLists.txt  CoreExtensions.hpp  CoreTypes.hpp
core/vector/: CMakeLists.txt  VectorConfig.hpp  VectorUopGenerator.cpp  VectorUopGenerator.hpp
fsl/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  Vars.mk  version.txt
fsl/docs/: CMakeLists.txt  DoxyApi  DoxyInterp  Makefile
fsl/docs/deprecated/: BNF.md  FSL_x2.md  commonlib.fsl  notes1_old_syntax_description.md  sequencelib.fsl  sequencelib.q.sav  test1.fsl  test2.fsl
fsl/docs/fsl_examples/: dhrystone.fsl
fsl/docs/md/: FSL_USER_REF.md  RISCV_ENCODING_FORMATS.md
fsl/fsl_api/: CMakeLists.txt  FieldExtractor.h  Fusion.h  FusionContext.h  FusionExceptions.h  FusionGroup.h  FusionTypes.h  HCache.h  Instruction.h  MachineInfo.h  Makefile  RadixTrie.h  uArchInfo.h
fsl/fsl_interp/: CMakeLists.txt  Makefile.sav  fsl.l  fsl.y
fsl/fsl_interp/inc/: FslParser.h  Msg.h  Options.h
fsl/fsl_interp/src/: FslParser.cpp  Options.cpp  c99.l  c99.y  fsl.l  fsl.l.sav  fsl.y  fsl.y.2  fsl.y.sav  main.cpp
fsl/test/: CMakeLists.txt  Makefile
fsl/test/api/: CMakeLists.txt  Makefile  symtab_expect.txt
fsl/test/interp/: CMakeLists.txt  Makefile
fusion/: CMakeLists.txt  Doxyfile  FSL.md  README.md
fusion/dsl/: CMakeLists.txt  Fsl.l  Fsl.y  FslParser.cpp  FslParser.hpp  fsl.l  fsl.y  qparser.cpp  qparser.h
fusion/fusion/: CMakeLists.txt  FieldExtractor.hpp  Fusion.hpp  FusionContext.hpp  FusionExceptions.hpp  FusionGroup.hpp  FusionTypes.hpp  HCache.hpp  Inst.h  Instruction.hpp  MachineInfo.hpp  RadixTrie.hpp  fieldextractor.h  fusion.h  fusioncontext.h  fusionexceptions.h  fusiongroup.h  fusiontypes.h  machineinfo.h  radixtrie.h  uArchInfo.h  uArchInfo.hpp  uArchInfoExceptions.hpp
fusion/test/: CMakeLists.txt  FslTests.cpp  Msg.hpp  Options.cpp  Options.hpp  TestBench.cpp  TestBench.hpp  TestData.cpp  TestFieldExtractor.cpp  fsltests.cpp  main.cpp  msg.h  options.cpp  options.h  testbench.cpp  testbench.h  testdata.cpp  testfieldextractor.cpp
fusion/test/expect/: symtab_expect.txt
fusion/test/fsl/: syntax2.fsl  test1.fsl
fusion/test/json/: isa_rv64v.json
test/: CMakeLists.txt
test/core/bpu/: BPTypes.hpp  BPUSink.hpp  BPUSource.hpp  BPU_test.cpp  BPU_testbench.cpp  Bpu_unit.cpp  Bpu_unit.hpp  CMakeLists.txt  Doxyfile  bpuinfo.cpp  check_files.sh  commonTypes.h  dut.cpp  dut.h  sink.cpp  sink.h  sink.hpp  src.cpp  src.h  src.hpp  testbench.cpp
test/core/branch_pred/: BranchPred_test.cpp  CMakeLists.txt
test/core/common/: CMakeLists.txt  SinkUnit.hpp  SourceUnit.cpp  SourceUnit.hpp
test/core/dcache/: CMakeLists.txt  Dcache_test.cpp  NextLvlSourceSinkUnit.hpp  SourceUnit.hpp  next_lvl_cache_refill.json
test/core/dispatch/: CMakeLists.txt  Dispatch_test.cpp  Dispatch_test.hpp  ExecutePipeSinkUnit.hpp  IssueQueueSinkUnit.cpp  test_core.yaml
test/core/icache/: CMakeLists.txt  ICacheChecker.hpp  ICacheSink.hpp  ICacheSource.hpp  ICache_test.cpp
test/core/issue_queue/: CMakeLists.txt  IssueQueue_test.cpp  test_int_pipe.json  test_mul_pipe.json  test_two_int_pipe.json
test/core/l2cache/: BIUSinkUnit.hpp  CMakeLists.txt  L2Cache_test.cpp  L2SourceUnit.hpp  hit_case.json  single_access.json
test/core/lsu/: CMakeLists.txt  Lsu_test.cpp  raw.json
test/core/prefetcher/: CMakeLists.txt  Prefetcher_test.cpp
test/core/rename/: CMakeLists.txt  ROBSinkUnit.hpp  Rename_test.cpp  amoadd.json  error-dump.dbg  i2f.json  raw_float_lsu.json  raw_int_lsu.json  raw_integer.json  raw_lsu.json  rename_multiple_instructions.json  rename_multiple_instructions_full.json
test/core/unit_template/: CMakeLists.txt  Dut.cpp  Dut.hpp  README.md  Sink.hpp  Src.cpp  Src.hpp  Testbench.cpp  (+2 more)
test/fusion/: CMakeLists.txt
test/sim/: CMakeLists.txt
tools/dump_inst/: CMakeLists.txt  dump_inst.cpp
(+367 files in other folders)
